<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.MainActivity"
    android:orientation="vertical"
    android:id="@+id/Container"
    >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/archivo_black"
        android:text="Taskit"
        android:textSize="36sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:visibility="invisible" />

        <ScrollView android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/mparent"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/displayText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="TextView"
                    android:visibility="invisible" />

                <Button
                    android:id="@+id/add_task_btn"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="233dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:text="Create Task"
                    android:textColorLink="#03A9F4" />

                <Button
                    android:id="@+id/goto_activity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="type"
                    android:hint="typer"
                    android:labelFor="@id/add_task_btn"
                    android:text="goto_activity"
                    android:visibility="invisible" />

                <EditText
                    android:id="@+id/editText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:autofillHints="password"
                    android:ems="10"
                    android:gravity="start|top"
                    android:inputType="textMultiLine"
                    android:labelFor="@id/goto_activity"
                    android:visibility="invisible" />

            </LinearLayout>


        </ScrollView>

    </LinearLayout>



</LinearLayout>
