<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"

    >


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#2ecc71"
        android:minWidth="500dp"
        android:orientation="horizontal"
        android:padding="8dp"


        >

        <ImageView

            android:layout_width="70dp"
            android:layout_height="70dp"
            android:contentDescription="icon image"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_launcher_foreground" />

        <TextView

            android:id="@+id/postid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:text="@string/textTest"
            android:textSize="14sp"
            />


    </LinearLayout>




</LinearLayout>